Added Happy Face Detection

--- a/AiDetector.ipynb
+++ b/AiDetector.ipynb
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
-    "class_name=\"Wakanda Forever\"\n",
+    "class_name=\"Happy Face\"\n",
     "# Initiate holistic model\n",
     "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
     "    \n",
